--- a/game.css
+++ b/game.css
@@ -10,10 +10,13 @@ body{
 .main-container{
     position: absolute;
     top: 20%;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .game-container{
+    position: relative;
     width: 600px;
     border: solid white 2px;
     height: 400px;
@@ -21,6 +24,7 @@ body{
 }
 
 .player{
+    position: absolute;
     width: 30px;
     height: 30px;
     background-color: transparent;
@@ -52,8 +56,6 @@ body{
 }
 
 .info{
-    position: absolute;
-    top: 70%;
     font-size: larger;
     text-align: center;
 }
